# robobase

./: .gitignore  Dockerfile  Dockerfile-ai  Readme.md  docker-run.sh  frames_2025-08-18_09.43.34.gv  robot.rviz
mobilerobo/: package.xml  setup.cfg  setup.py
mobilerobo/config/: controllers.yaml  ekf.yaml  gz-bridge.yaml  gz-sim-bridge.yaml  nav2-config.yaml  robot.rviz  slam-config.yaml  twist-mux.yaml  twist_mux.yaml
mobilerobo/launch/: joystick.launch.py  nav.launch.py  navigation.launch.py  robo.launch.py  robot-spawn.launch.py  sim.launch.py  slam.launch.py  urdf.launch.py
mobilerobo/maps/: house_graph.data  house_map.pgm  house_map.yaml
mobilerobo/worlds/: empty.sdf  empty.world  house.sdf  house.world
robobase_description/: CMakeLists.txt  package.xml
robobase_description/models/: inertia_macros.xacro  materials.urdf.xacro  my_robot.sdf  robo.urdf.xacro  temp.urdf
robobase_description/models/bases/: rectangular-base.urdf.xacro
robobase_description/models/gazebo/: 4differential-drive.urdf.xacro
robobase_description/models/sensors/: camera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro
robobase_description/models/turtlebot3_house/: model.sdf
